--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:flatui="http://schemas.android.com/apk/res-auto"
+xmlns:wheel="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_gravity="center"
@@ -20,11 +21,11 @@ tools:context="project.se.action.ActionVocabularyDetail">
         android:id="@+id/voc_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ชื่อคำศัพท์"
+        android:text=""
         android:textSize="40dp"
         android:gravity="center"
         android:layout_margin="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         flatui:fl_fontFamily="Waffle"
         flatui:fl_fontWeight="regular"
         flatui:fl_fontExtension="otf"
@@ -43,13 +44,32 @@ tools:context="project.se.action.ActionVocabularyDetail">
             android:gravity="left"
             android:padding="10dp" >
 
-            <VideoView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:id="@+id/videoView"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+                <VideoView
+                    android:layout_width="150dp"
+                    android:layout_height="180dp"
+                    android:id="@+id/videoView"
+                    android:layout_gravity="center"
+                    />
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center">
+                    <com.pnikosis.materialishprogress.ProgressWheel
+                        android:id="@+id/progress_wheel"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        wheel:matProg_barColor="#5588FF"
+                        wheel:matProg_progressIndeterminate="true" />
+                    </LinearLayout>
+
+            </FrameLayout>
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/voc_name"
                 android:layout_width="wrap_content"
@@ -57,7 +77,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
-                android:text="ชื่อคำศัพท์"
+                android:text=""
                 android:layout_margin="5dip"
                 flatui:fl_size="30dip"
                 flatui:fl_theme="@array/dark"
@@ -73,7 +93,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
-                android:text="ชื่อหมวด"
+                android:text=""
                 android:layout_margin="5dip"
                 flatui:fl_size="30dip"
                 flatui:fl_theme="@array/dark"
@@ -89,7 +109,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
-                android:text="ประเภทคำ"
+                android:text=""
                 android:layout_margin="5dip"
                 flatui:fl_size="30dip"
                 flatui:fl_theme="@array/dark"
@@ -104,7 +124,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
-                android:text="รายละเอียด"
+                android:text=""
                 android:layout_margin="5dip"
                 flatui:fl_size="30dip"
                 flatui:fl_theme="@array/dark"
@@ -120,7 +140,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
-                android:text="ตัวอย่าง"
+                android:text=""
                 android:layout_margin="5dip"
                 flatui:fl_size="30dip"
                 flatui:fl_theme="@array/dark"
@@ -128,6 +148,7 @@ tools:context="project.se.action.ActionVocabularyDetail">
                 flatui:fl_fontFamily="Waffle"
                 flatui:fl_fontWeight="regular"
                 flatui:fl_fontExtension="otf"/>
+
 
 
         </LinearLayout>
