Place Info with google map api

--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -1,12 +1,65 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="project.se.information.Information">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:flatui="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="1">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.cengalabs.flatui.views.FlatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ข้อมูลแนะนำ"
+        android:id="@+id/textView"
+        android:padding="20dp"
+        android:textSize="60dp"
+        android:singleLine="true"
+        android:layout_gravity="center_horizontal"
+        flatui:fl_theme="@array/sea"
+        flatui:fl_fontFamily="Waffle"
+        flatui:fl_fontWeight="regular"
+        flatui:fl_fontExtension="otf"
+        flatui:fl_textColor="fl_darker" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.cengalabs.flatui.views.FlatButton
+            android:id="@+id/btn_book"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|center_horizontal"
+            android:padding="40dp"
+            android:layout_margin="20dp"
+            android:text="แนะนำหนังสือ"
+            android:textSize="40dp"
+            android:singleLine="true"
+            android:drawableLeft="@drawable/ic_local_library_black_36dp"
+            flatui:fl_theme="@array/grape"
+            flatui:fl_textAppearance="fl_light"
+            flatui:fl_blockButtonEffectHeight="3dp"
+            flatui:fl_fontFamily="Waffle"
+            flatui:fl_fontWeight="regular"
+            flatui:fl_fontExtension="otf"/>
+
+        <com.cengalabs.flatui.views.FlatButton
+            android:id="@+id/btn_place"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|center_horizontal"
+            android:padding="40dp"
+            android:layout_margin="20dp"
+            android:text="สถานที่"
+            android:textSize="40dp"
+            android:singleLine="true"
+            android:drawableLeft="@drawable/ic_pin_drop_black_36dp"
+            flatui:fl_theme="@array/sand"
+            flatui:fl_textAppearance="fl_light"
+            flatui:fl_blockButtonEffectHeight="3dp"
+            flatui:fl_fontFamily="Waffle"
+            flatui:fl_fontWeight="regular"
+            flatui:fl_fontExtension="otf"/>
+    </LinearLayout>
+</LinearLayout>
