--- a/app/src/main/res/layout/activity_action_category.xml
+++ b/app/src/main/res/layout/activity_action_category.xml
@@ -1,6 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-android:layout_height="match_parent"
+xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
 tools:context="project.se.action.ActionCategory">
 
 
@@ -8,5 +11,7 @@ tools:context="project.se.action.ActionCategory">
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/listView"
-    android:layout_weight="1" />
+    android:layout_centerVertical="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 </LinearLayout>
