--- a/app/src/main/res/layout/activity_action_vocabulary_column.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_column.xml
@@ -1,32 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <com.cengalabs.flatui.views.FlatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:gravity="center"
-        android:text="No."
-        android:textSize="30dp"
-        android:id="@+id/position"
-        flatui:fl_fontFamily="Waffle"
-        flatui:fl_fontWeight="regular"
-        flatui:fl_fontExtension="otf"
-        flatui:fl_textColor="fl_darker"/>
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
 
-    <com.cengalabs.flatui.views.FlatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:gravity="center"
-        android:text="Category"
-        android:textSize="30dp"
-        android:id="@+id/vocName"
-        flatui:fl_fontFamily="Waffle"
-        flatui:fl_fontWeight="regular"
-        flatui:fl_fontExtension="otf"
-        flatui:fl_textColor="fl_darker"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+        <com.cengalabs.flatui.views.FlatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="No."
+            android:textSize="30dp"
+            android:id="@+id/position"
+            flatui:fl_fontFamily="ThaiSansNeue"
+            flatui:fl_fontWeight="light"
+            flatui:fl_fontExtension="ttf"
+            flatui:fl_theme="@array/dark"
+            flatui:fl_textColor="fl_darker"/>
+        <ImageView android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/imageView"
+            android:padding="5dp"
+            android:layout_margin="5dp"/>
+        <com.cengalabs.flatui.views.FlatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Vocabulary"
+            android:textSize="30dp"
+            android:id="@+id/vocName"
+            flatui:fl_fontFamily="ThaiSansNeue"
+            flatui:fl_fontWeight="light"
+            flatui:fl_fontExtension="ttf"
+            flatui:fl_theme="@array/dark"
+            flatui:fl_textColor="fl_darker"/>
+    </LinearLayout>
 </LinearLayout>
