--- a/app/src/main/res/layout/activity_place_info_column.xml
+++ b/app/src/main/res/layout/activity_place_info_column.xml
@@ -17,9 +17,9 @@
         android:id="@+id/position"
         android:drawableLeft="@drawable/ic_home_black_36dp"
         android:drawablePadding="5dp"
-        flatui:fl_fontFamily="Waffle"
-        flatui:fl_fontWeight="regular"
-        flatui:fl_fontExtension="otf"
+        flatui:fl_fontFamily="ThaiSansNeue"
+        flatui:fl_fontWeight="light"
+        flatui:fl_fontExtension="ttf"
         flatui:fl_textColor="fl_darker"/>
     <com.cengalabs.flatui.views.FlatTextView
         android:layout_width="wrap_content"
@@ -29,8 +29,8 @@
         android:text="Place Name"
         android:textSize="30dp"
         android:id="@+id/place_name"
-        flatui:fl_fontFamily="Waffle"
-        flatui:fl_fontWeight="regular"
-        flatui:fl_fontExtension="otf"
+        flatui:fl_fontFamily="ThaiSansNeue"
+        flatui:fl_fontWeight="light"
+        flatui:fl_fontExtension="ttf"
         flatui:fl_textColor="fl_darker"/>
 </LinearLayout>
