--- a/app/src/main/res/layout/activity_action_category.xml
+++ b/app/src/main/res/layout/activity_action_category.xml
@@ -1,17 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-tools:context="project.se.action.ActionCategory">
+    android:layout_marginRight="5dp">
 
-
-<ListView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/listView"
-    android:layout_centerVertical="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </LinearLayout>
