--- a/app/src/main/res/layout/activity_place_info_column.xml
+++ b/app/src/main/res/layout/activity_place_info_column.xml
@@ -13,9 +13,9 @@
         android:padding="5dp"
         android:gravity="center"
         android:text="No."
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:id="@+id/position"
-        android:drawableLeft="@drawable/ic_home_black_36dp"
+        android:drawableRight="@drawable/ic_home_black_36dp"
         android:drawablePadding="5dp"
         flatui:fl_fontFamily="ThaiSansNeue"
         flatui:fl_fontWeight="light"
@@ -27,7 +27,7 @@
         android:padding="5dp"
         android:gravity="left"
         android:text="Place Name"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:id="@+id/place_name"
         flatui:fl_fontFamily="ThaiSansNeue"
         flatui:fl_fontWeight="light"
