--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -1,12 +1,157 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="project.se.information.book.BookDetail">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:flatui="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    tools:context="project.talktodeaf.wordgame.GameWordFirstFragment$PlaceholderFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
+
+        <com.cengalabs.flatui.views.FlatTextView
+            android:id="@+id/book_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ชื่อหนังสือ"
+            android:textSize="40dp"
+            android:gravity="center"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="30dp"
+            flatui:fl_fontFamily="Waffle"
+            flatui:fl_fontWeight="regular"
+            flatui:fl_fontExtension="otf"
+            flatui:fl_textColor="fl_darker" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:padding="10dp" >
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageView"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
+                    />
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="ชื่อหนังสือ"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_des"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="รายละเอียด"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="จำนวนหน้า"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="ชื่อผู้แต่ง"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_publisher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="ชื่อสำนักพิมพ์"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+
+                <com.cengalabs.flatui.views.FlatTextView
+                    android:id="@+id/book_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:background="#0000"
+                    android:textSize="20dp"
+                    android:text="ราคา"
+                    android:layout_margin="5dip"
+                    flatui:fl_size="30dip"
+                    flatui:fl_theme="@array/dark"
+                    android:orientation="vertical"
+                    flatui:fl_fontFamily="Waffle"
+                    flatui:fl_fontWeight="regular"
+                    flatui:fl_fontExtension="otf"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
