--- a/app/src/main/res/menu/menu_action_category.xml
+++ b/app/src/main/res/menu/menu_action_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="project.se.action.ActionCategory">
     <item android:id="@+id/action_search"
         android:title="action_search"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
