--- a/app/src/main/res/layout/activity_book_info_column.xml
+++ b/app/src/main/res/layout/activity_book_info_column.xml
@@ -19,9 +19,10 @@
             android:layout_gravity="center"
             android:textSize="30dp"
             android:id="@+id/position"
-            flatui:fl_fontFamily="Waffle"
-            flatui:fl_fontWeight="regular"
-            flatui:fl_fontExtension="otf"
+            flatui:fl_fontFamily="ThaiSansNeue"
+            flatui:fl_fontWeight="light"
+            flatui:fl_fontExtension="ttf"
+            flatui:fl_theme="@array/dark"
             flatui:fl_textColor="fl_darker"/>
     <ImageView
         android:id="@+id/img"
@@ -37,9 +38,10 @@
         android:text="Vocabulary"
         android:textSize="30dp"
         android:id="@+id/bookName"
-        flatui:fl_fontFamily="Waffle"
-        flatui:fl_fontWeight="regular"
-        flatui:fl_fontExtension="otf"
+        flatui:fl_fontFamily="ThaiSansNeue"
+        flatui:fl_fontWeight="light"
+        flatui:fl_fontExtension="ttf"
+        flatui:fl_theme="@array/dark"
         flatui:fl_textColor="fl_darker"/>
     </LinearLayout>
 </LinearLayout>
