--- a/app/src/main/res/layout/activity_word_game.xml
+++ b/app/src/main/res/layout/activity_word_game.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:flatui="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -15,6 +16,48 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tabs"
         tools:context=".MainActivity" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
+    <com.cengalabs.flatui.views.FlatButton
+        android:id="@+id/btn_prev"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="5dp"
+        android:text="ข้อก่อนหน้า"
+        android:textSize="25dp"
+        android:singleLine="true"
+        android:layout_weight="1.0"
+        android:layout_alignParentBottom="true"
+        android:drawableLeft="@drawable/ic_chevron_left_white_36dp"
+        flatui:fl_theme="@array/sea"
+        flatui:fl_textAppearance="fl_light"
+        flatui:fl_blockButtonEffectHeight="3dp"
+        flatui:fl_fontFamily="ThaiSansNeue"
+        flatui:fl_fontWeight="light"
+        flatui:fl_fontExtension="ttf"
+        flatui:fl_textColor="fl_darker"/>
 
-
+    <com.cengalabs.flatui.views.FlatButton
+        android:id="@+id/btn_next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="5dp"
+        android:text="ข้อต่อไป"
+        android:textSize="25dp"
+        android:singleLine="true"
+        android:layout_weight="1.0"
+        android:layout_alignParentBottom="true"
+        android:drawableRight="@drawable/ic_chevron_right_white_36dp"
+        flatui:fl_theme="@array/sea"
+        flatui:fl_textAppearance="fl_light"
+        flatui:fl_blockButtonEffectHeight="3dp"
+        flatui:fl_fontFamily="ThaiSansNeue"
+        flatui:fl_fontWeight="light"
+        flatui:fl_fontExtension="ttf"
+        flatui:fl_textColor="fl_darker"/>
+    </LinearLayout>
 </RelativeLayout>
