--- a/app/src/main/res/layout/fragment_word_game.xml
+++ b/app/src/main/res/layout/fragment_word_game.xml
@@ -3,7 +3,8 @@
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
+    android:gravity="center"
+    android:layout_marginTop="50dp"
     android:id="@+id/linear_layout">
 
 
@@ -13,25 +14,32 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:id="@+id/linear">
         <VideoView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="230dp"
+            android:layout_height="280dp"
             android:id="@+id/videoView"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             />
+        <RadioGroup
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text"
+        android:id="@+id/myRadioGroup"
+        android:checkedButton="@+id/sound" >
 
         <com.cengalabs.flatui.views.FlatRadioButton
-            android:id="@+id/checkbox1"
+            android:id="@+id/correctchoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#0000"
             android:text="Choice 1"
             android:textSize="30dp"
+            android:gravity="left"
             android:layout_margin="5dip"
             flatui:fl_size="30dip"
             flatui:fl_theme="@array/dark"
@@ -42,13 +50,14 @@
             flatui:fl_dotMargin="1dp"/>
 
         <com.cengalabs.flatui.views.FlatRadioButton
-            android:id="@+id/checkbox2"
+            android:id="@+id/wrongchoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#0000"
             android:text="Choice 2"
             android:textSize="30dp"
+            android:gravity="left"
             android:layout_margin="5dip"
             flatui:fl_size="30dip"
             flatui:fl_theme="@array/dark"
@@ -57,6 +66,7 @@
             flatui:fl_fontWeight="light"
             flatui:fl_fontExtension="ttf"
             flatui:fl_dotMargin="1dp"/>
+        </RadioGroup>
 
     </LinearLayout>
 
