--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="เกมส์"
+            android:text="เกม"
             android:textSize="25dp"
             android:gravity="center"
             android:paddingTop="40dp"
