--- a/app/src/main/res/layout/fragment_word_game.xml
+++ b/app/src/main/res/layout/fragment_word_game.xml
@@ -35,7 +35,7 @@
             android:id="@+id/correctchoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:background="#0000"
             android:text="Choice 1"
             android:textSize="30dp"
@@ -53,7 +53,7 @@
             android:id="@+id/wrongchoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:background="#0000"
             android:text="Choice 2"
             android:textSize="30dp"
